--- a/R302-docs/mkdocs.yml
+++ b/R302-docs/mkdocs.yml
@@ -1,10 +1,10 @@
 site_name: BUT R302 Réseaux d'opérateurs 
 
 nav:
-  - 'Mindmap généralités BGP': index.md
+  - 'Généralités BGP(mindmap)': index.md
   - 'Généralités BGP(idem que précédemment mais sans mindmap)': aplat.md
 #  - 'Mindmap Commandes BGP': commandes.md
-  - 'Mindmap Commandes BGP': commandes_aplat.mm.md
+  - 'Commandes BGP': commandes_aplat.mm.md
 plugins:
   - markmap:
        base_path: docs
