--- a/R302-docs/mkdocs.yml
+++ b/R302-docs/mkdocs.yml
@@ -1,8 +1,8 @@
 site_name: BUT R302 Réseaux d'opérateurs 
 
 nav:
-  - 'Généralités BGP (mindmap)': index.md
-  - 'Généralités BGP (texte)': aplat.md
+  - 'Généralités BGP (texte)': index.md
+  - 'Généralités BGP (mindmap)': généralités.mm.md
   - 'Commandes BGP (mindmap)': bgp_cmd.html 
   - 'Commandes BGP (texte)': commandes_aplat.mm.md
   - 'Généralités MPLS (mindmap)': mplsmm.md
